--- a/src/template.html
+++ b/src/template.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" class="unloaded">
+<html lang="en" class="preloaded">
 	<head>
 		<meta charset='utf-8'>
 		<meta name='viewport' content='width=device-width'>
