--- a/src/template.html
+++ b/src/template.html
@@ -1,13 +1,13 @@
 <!doctype html>
 <html lang="en" class="preloaded">
 	<head>
-		<meta charset='utf-8'>
-		<meta name='viewport' content='width=device-width'>
-		<meta name='theme-color' content='#aa1e1e'>
+		<meta charset="utf-8">
+		<meta name="viewport" content="width=device-width">
+		<meta name="theme-color" content="#aa1e1e">
 
 		%sapper.base%
 
-		<link rel='stylesheet' href='/css/global.css'>
+		<link rel="stylesheet" href="/css/global.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=QEMOXedaY9">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=QEMOXedaY9">
