--- a/src/template.html
+++ b/src/template.html
@@ -18,7 +18,7 @@
 		<meta name="msapplication-TileColor" content="#ffffff">
 		<meta name="theme-color" content="#ffffff">
 
-		<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,700,700i,900,900i&amp;subset=vietnamese" rel="stylesheet">
+		<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
 		%sapper.styles%
 		%sapper.head%
