--- a/src/template.html
+++ b/src/template.html
@@ -2,7 +2,7 @@
 <html lang="en" class="preloaded">
 	<head>
 		<meta charset="utf-8">
-		<meta name="viewport" content="width=device-width">
+		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<meta name="theme-color" content="#aa1e1e">
 
 		%sapper.base%
@@ -12,7 +12,7 @@
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
 		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png?v=1">
 		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png?v=1">
-		<link rel="manifest" href="/manifest.json?v=1">
+		<link rel="manifest" href="/manifest.json?v=1" crossorigin="use-credentials">
 		<link rel="mask-icon" href="/safari-pinned-tab.svg?v=1" color="#878787">
 		<link rel="shortcut icon" href="/favicon.ico?v=1">
 		<meta name="msapplication-TileColor" content="#ffffff">
@@ -26,7 +26,5 @@
 	</head>
 	<body>
 		<div id="sapper">%sapper.html%</div>
-		<div class="yavascript">
-		</div>
 	</body>
 </html>
