--- a/src/app.html
+++ b/src/app.html
@@ -5,8 +5,6 @@
 		<meta name="viewport" content="width=device-width,initial-scale=1.0">
 		<meta name="theme-color" content="#aa1e1e">
 
-		%sapper.base%
-
 		<link rel="stylesheet" href="/css/global.css">
 
 		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png?v=1">
@@ -20,11 +18,9 @@
 
 		<link href="https://fonts.googleapis.com/css?family=Muli:300,300i,400,400i,700,700i,900,900i" rel="stylesheet">
 
-		%sapper.scripts%
-		%sapper.styles%
-		%sapper.head%
+		%svelte.head%
 	</head>
 	<body>
-		<div id="sapper">%sapper.html%</div>
+		<div id="svelte">%svelte.body%</div>
 	</body>
 </html>
